# open-bible

./: .czrc  .env.example  .gitattributes  .gitignore  .npmrc  .ts-errors.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  README.md  README.pt-BR.md  ROADMAP.md  SECURITY.md  SUPPORT.md  commitlint.config.mjs  components.json  drizzle.config.ts  env.example  eslint.config.mjs  next.config.mjs  opencode.json  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  skills-lock.json  vercel.json  vitest.config.ts
.codex/: hooks.json
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md  release.yml
.husky/: pre-commit
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
components/: bible-version-selector.tsx  book-chapter-dialog.tsx  book-list.tsx  chapter-grid.tsx  download-versions-dialog.tsx  env-badge.tsx  highlight-toolbar.tsx  inspector-comm-tab.tsx  inspector-notes-tab.tsx  inspector-panel.tsx  inspector-refs-tab.tsx  mobile-nav.tsx  note-editor-dialog.tsx  notes-panel.tsx  panel-layout.tsx  reader-chapter-nav.tsx  reader-empty.tsx  reader-header.tsx  reader-version-badge.tsx  reader.tsx  secondary-sidebar.tsx  service-worker-register.tsx  sidebar.tsx  theme-provider.tsx  update-banner.tsx  verse-row.tsx
docs/: plan-sonner-migration.md
lib/: api-base.ts  api-client.ts  (+20 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+368 files in other folders)
